Increase total troops and recuitment speed
Increasing defense troops recruit time, increase AIs maximun troops total, and increase additional attacking unit after attack.

--- a/Mod Utility/UnofficialCrusaderPatch_2.15b/ucp.cfg
+++ b/Mod Utility/UnofficialCrusaderPatch_2.15b/ucp.cfg
@@ -18,13 +18,13 @@ ai_fix_crusader_archers_pitch={ ai_fix_crusader_archers_pitch={True} }
 o_fix_baker_disappear={ o_fix_baker_disappear={True} }
 o_fix_moat_digging_unit_disappearing={ o_fix_moat_digging_unit_disappearing={True} }
 ai_housing={ build_housing={False;0} campfire_housing={False;5} delete_housing={False} }
-ai_recruitstate_initialtimer={ ai_recruitstate_initialtimervalue={False;6} }
-ai_attacklimit={ ai_attacklimit={True;500} }
+ai_recruitstate_initialtimer={ ai_recruitstate_initialtimervalue={True;1} }
+ai_attacklimit={ ai_attacklimit={True;1000} }
 ai_attackwave={ ai_attackwave={True} }
 ai_attacktarget={ ai_attacktarget_nearest={False} ai_attacktarget_richest={False} ai_attacktarget_weakest={False} }
 ai_nosleep={ ai_nosleep={False} }
 ai_demolish={ ai_demolish_walls={False} ai_demolish_trapped={False} ai_demolish_eco={False} }
-ai_addattack={ ai_addattack={False;5} ai_addattack_alt={False;0} }
+ai_addattack={ ai_addattack={False;5} ai_addattack_alt={True;1} }
 ai_recruitinterval={ ai_recruitinterval={True} }
 u_laddermen={ u_laddermen={True} }
 u_arabxbow={ u_arabxbow={True} }
