--- a/Mod Utility/UnofficialCrusaderPatch_2.15b/ucp.cfg
+++ b/Mod Utility/UnofficialCrusaderPatch_2.15b/ucp.cfg
@@ -17,7 +17,7 @@ o_fix_fletcher_bug={ o_fix_fletcher_bug={True} }
 ai_fix_crusader_archers_pitch={ ai_fix_crusader_archers_pitch={True} }
 o_fix_baker_disappear={ o_fix_baker_disappear={True} }
 o_fix_moat_digging_unit_disappearing={ o_fix_moat_digging_unit_disappearing={True} }
-ai_housing={ build_housing={False;0} campfire_housing={False;5} delete_housing={False} }
+ai_housing={ build_housing={True;5} campfire_housing={True;10} delete_housing={True} }
 ai_recruitstate_initialtimer={ ai_recruitstate_initialtimervalue={True;1} }
 ai_attacklimit={ ai_attacklimit={True;1000} }
 ai_attackwave={ ai_attackwave={True} }
