--- a/Mod Utility/UnofficialCrusaderPatch_2.15b/ucp.cfg
+++ b/Mod Utility/UnofficialCrusaderPatch_2.15b/ucp.cfg
@@ -22,7 +22,7 @@ ai_recruitstate_initialtimer={ ai_recruitstate_initialtimervalue={True;1} }
 ai_attacklimit={ ai_attacklimit={True;1000} }
 ai_attackwave={ ai_attackwave={True} }
 ai_attacktarget={ ai_attacktarget_nearest={False} ai_attacktarget_richest={False} ai_attacktarget_weakest={False} }
-ai_nosleep={ ai_nosleep={False} }
+ai_nosleep={ ai_nosleep={True} }
 ai_demolish={ ai_demolish_walls={False} ai_demolish_trapped={False} ai_demolish_eco={False} }
 ai_addattack={ ai_addattack={False;5} ai_addattack_alt={True;1} }
 ai_recruitinterval={ ai_recruitinterval={True} }
@@ -44,7 +44,7 @@ o_moatvisibility={ o_moatvisibility={True} }
 o_gamespeed={ o_gamespeed={True} }
 o_responsivegates={ o_responsivegates={True} }
 o_onlyai={ o_onlyai={True} }
-o_armory_marketplace_weapon_order_fix={ o_armory_marketplace_weapon_order_fix={False} }
+o_armory_marketplace_weapon_order_fix={ o_armory_marketplace_weapon_order_fix={True} }
 o_increase_path_update_tick_rate={ o_increase_path_update_tick_rate={True} }
 o_default_multiplayer_speed={ o_default_multiplayer_speed={True;50} }
 o_shfy={ o_shfy_beer={False} o_shfy_religion={False} o_shfy_peasantspawnrate={False} o_shfy_resourcequantity={False} }
