Change Sultan starting troops
Sultan now use ArabArcher as starting troops instead of Slinger.

--- a/Mod Utility/UnofficialCrusaderPatch_2.15b/ucp.cfg
+++ b/Mod Utility/UnofficialCrusaderPatch_2.15b/ucp.cfg
@@ -53,8 +53,9 @@ o_seed_modification_possibility_title={ o_seed_modification_possibility_only_set
 o_change_siege_engine_spawn_position_catapult={ o_change_siege_engine_spawn_position_catapult={False} }
 o_stop_player_keep_rotation={ o_stop_player_keep_rotation={False} }
 res_vanilla={ res_vanilla={True} }
+s_CowMan={ s_CowMan={True} }
 s_UCP-StartingTroops-Patch={ s_UCP-StartingTroops-Patch={False} }
-s_vanilla={ s_vanilla={True} }
+s_vanilla={ s_vanilla={False} }
 aiv_CowMan= { aiv_CowMan={True} }
 aiv_EvreyFixed= { aiv_EvreyFixed={False} }
 aiv_EvreyHistory= { aiv_EvreyHistory={False} }
